Fixes position using relative to top center on mobile

--- a/style.css
+++ b/style.css
@@ -82,9 +82,9 @@ button:hover{
   .container{
     width: 300px;
     height: 300px;
-    position: absolute;
-    top: 18px;
-    left: 281px;
+    position: relative;
+    top: -11px;
+    left: 0px;
     
   }
 }
